 * fix an AttributeError specific to the 0.6 release since [2953]
 * fix an Error for `TagCloud` macro when being called without arguments
 * improve formatting of header for `tag_view.html` page template
 * do TagSystem class API cleanup by moving db access to model layer
 
 new features
 * #2509: Create wiki page from /tags/<tag> page
 * #2708: Add rel-tag microformat to tags list
 * #3610: ListTagged macro should have distinct formatting of closed tickets
 * #3754: Tag redirects to existing wiki page instead of listing tagged pages
 * #3851: TAGS_VIEW not showing page tags along for anonymous
 * #4799: TagCloud should optionally be case-insensitive
   by adding a new option `cloud_caseless_sort`
 * #7787: Add i18n support
 * #8638: Should implement wiki_page_renamed of IWikiChangeListener interface
 * #9058: Let `TAGS_MODIFY` inherited `TAGS_VIEW` for intuitive permissions
 * #9061: Mass tag replacement functionality
 * #9063: Allow excluding realms from queries by default
 * #9064: More rendering options for ListTagged macro and tag-handler
 * #9194: Add unittest and functional test infrastructure
 * render_cloud() now passes a percent to renderers instead of font pixel size
 * add `ignore_closed_tickets` option: skip closed tickets when collecting tags
 * remove redundant JavaScript files
 * move generic code from TagCloud into new TagSystem.get_all_tags() method
 * widened Wiki tag input field slightly
 * prepare translatable macro documentation
 * fix a warning message for old TagsQuery syntax (<= tractags-0.5)
 * let `describe_tagged_resource` method for tickets use Trac core with i18n
 * review and improve code according to PEP 8, SQL statement's formatting too
 * add pager for ListTagged, if matches exceed `listtagged_items_per_page`
 * add more unit tests


ToDo: add more historic entries

tractags-0.6 - a total code rewrite (21-Jan-2008)

tractags-0.5 - Trac 0.11 support (31-Dec-2007)

tractags-0.4.1 (06-Jun-2007)

tractags-0.4 (19-Apr-2006)